# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/account/login": {
             "post": {
-                "description": "此接口用于在用户完成微信OAuth授权后,注册或登录使用,新用户完成注册,老用户直接登录",
+                "description": "此接口用于在用户登录使用",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,7 +16,7 @@
                 "tags": [
                     "普通用户-账号相关"
                 ],
-                "summary": "用户完成微信OAuth授权后注册或登录使用",
+                "summary": "用户登录使用",
                 "parameters": [
                     {
                         "description": "ActLogin",
@@ -134,13 +134,6 @@
                 ],
                 "summary": "二维码图片生成接口",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "用户登录后返回的token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "需要生成的二维码的边长",
